--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -12,19 +12,31 @@
     <span style="float:left; padding-top: 12px; padding-bottom: 12px;">
         <% if (page.social) { %>
             <span>
-                <% if (page.social.vk) { %><a href="<%- page.social.vk %>" target="_blank"><%- page.l.vk %></a><% } %>
-                <% if (page.social.facebook) { %><span> • </span><a href="<%- page.social.facebook %>" target="_blank">facebook</a><% } %>
-                <% if (page.social.telegram) { %><span> • </span><a href="<%- page.social.telegram %>" target="_blank"><%- page.l.telegram %></a><% } %>
-                <% if (page.social.twitter) { %><span> • </span><a href="<%- page.social.twitter %>" target="_blank">twitter</a><% } %>
-                <% if (page.social.youtube) { %><span> • </span><a href="<%- page.social.youtube %>" target="_blank"><%- page.l.youtube %></a><% } %>
-                <% if (page.social.instagram) { %><span> • </span><a href="<%- page.social.instagram %>" target="_blank"><%- page.l.instagram %></a><% } %>
+                <% if (page.social.vk) { %><a href="<%- page.social.vk %>" target="_blank"><%- page.l.vk %></a>
+                <% } %>
+                <% if (page.social.facebook) { %><span> • </span><a href="<%- page.social.facebook %>" target="_blank">facebook</a>
+                <% } %>
+                <% if (page.social.telegram) { %><span> • </span><a href="<%- page.social.telegram %>"
+                                                                    target="_blank"><%- page.l.telegram %></a>
+                <% } %>
+                <% if (page.social.twitter) { %><span> • </span><a href="<%- page.social.twitter %>" target="_blank">twitter</a>
+                <% } %>
+                <% if (page.social.youtube) { %><span> • </span><a href="<%- page.social.youtube %>"
+                                                                   target="_blank"><%- page.l.youtube %></a>
+                <% } %>
+                <% if (page.social.instagram) { %><span> • </span><a href="<%- page.social.instagram %>"
+                                                                     target="_blank"><%- page.l.instagram %></a>
+                <% } %>
             </span>
         <% } %>
-        Email: <span id="mylo">Activate JS</span><script>(function(d,i,l,r){d.getElementById(i).innerHTML=l+'@'+r;})(window.document,'mylo','<%- page.email.split('@')[0] %>','<%- page.email.split('@')[1] %>');</script>
+        Email: <span id="mylo">Activate JS</span><script>(function(d, i, l, r) {
+          d.getElementById(i).innerHTML = l + '@' + r;
+        })(window.document, 'mylo', '<%- page.email.split('@')[0] %>', '<%- page.email.split('@')[1] %>');</script>
     </span>
 
     <div style="float:right;  text-align: right; width:300px; padding-top: 12px; padding-bottom: 12px;">
-        &copy;&nbsp;<%- new Date().getFullYear() %>&nbsp;<a href="https://cinemapress.io" target="_blank">CinemaPress</a>
+        &copy;&nbsp;<%- new Date().getFullYear() %>&nbsp;<a href="https://cinemapress.io"
+                                                            target="_blank">CinemaPress</a>
     </div>
 
     <script src="/themes/<%- page.theme %>/public/js/all.min.js"></script>
