--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -1,7 +1,8 @@
 <div class="header">
     <div class="header44">
         <div class="main_menu">
-            <a href="/"><img src="/themes/<%- page.theme %>/public/images/logo.svg?v=<%- page.ver %>" style="height: 26px" alt="Logo"></a>
+            <a href="/"><img src="/themes/<%- page.theme %>/public/images/logo.svg?v=<%- page.ver %>"
+                             style="height: 26px" alt="Logo"></a>
         </div>
         <div class="user_panel">
             <div class="loginin continueViewingBlock" style="display: none;">
@@ -42,10 +43,12 @@
                                 <a href="/<%- page.urls.year %>/2018"><span class="name"><%- page.l.premieres %></span></a>
                             </td>
                             <td class="item">
-                                <a href="/<%- page.urls.type %>/<%- page.urls.types.serial %>"><span class="name"><%- page.l.series %></span></a>
+                                <a href="/<%- page.urls.type %>/<%- page.urls.types.serial %>"><span
+                                            class="name"><%- page.l.series %></span></a>
                             </td>
                             <td class="item">
-                                <a href="/<%- page.urls.content %>?tag=<%- page.l.collections %>"><span class="name"><%- page.l.collections %></span></a>
+                                <a href="/<%- page.urls.content %>?tag=<%- page.l.collections %>"><span
+                                            class="name"><%- page.l.collections %></span></a>
                             </td>
                         </tr>
                         </tbody>
@@ -68,10 +71,14 @@
                                     <div class="inner">
                                         <a href="<%- movie.url %>" title="<%= movie.title %>">
                                             <div style="position: relative;">
-                                                <img src="<%- movie.poster %>" style="width: 118px" alt="<%= movie.title %> (<%- movie.year %>)" title="<%= movie.title %> (<%- movie.year %>)">
+                                                <img src="<%- movie.poster %>" style="width: 118px"
+                                                     alt="<%= movie.title %> (<%- movie.year %>)"
+                                                     title="<%= movie.title %> (<%- movie.year %>)">
                                                 <% if (movie.quality) { %>
-                                                    <div class="cinemapress-quality" style="margin: 3px; padding: 3px;font-size: 10px;">
-                                                        <span class="cinemapress-svg-quality" style="height: 8px !important;min-height: 8px !important;"></span>&nbsp;<%- movie.quality %>
+                                                    <div class="cinemapress-quality"
+                                                         style="margin: 3px; padding: 3px;font-size: 10px;">
+                                                        <span class="cinemapress-svg-quality"
+                                                              style="height: 8px !important;min-height: 8px !important;"></span>&nbsp;<%- movie.quality %>
                                                     </div>
                                                 <% } %>
                                             </div>
@@ -93,10 +100,14 @@
                                     <div class="inner">
                                         <a href="<%- movie.url %>" title="<%= movie.title %>">
                                             <div class="cinemapress-poster">
-                                                <img src="<%- movie.poster %>" style="width: 118px" alt="<%= movie.title %> (<%- movie.year %>)" title="<%= movie.title %> (<%- movie.year %>)">
+                                                <img src="<%- movie.poster %>" style="width: 118px"
+                                                     alt="<%= movie.title %> (<%- movie.year %>)"
+                                                     title="<%= movie.title %> (<%- movie.year %>)">
                                                 <% if (movie.quality) { %>
-                                                    <div class="cinemapress-quality" style="margin: 3px; padding: 3px;font-size: 10px;">
-                                                        <span class="cinemapress-svg-quality" style="height: 8px !important;min-height: 8px !important;"></span>&nbsp;<%- movie.quality %>
+                                                    <div class="cinemapress-quality"
+                                                         style="margin: 3px; padding: 3px;font-size: 10px;">
+                                                        <span class="cinemapress-svg-quality"
+                                                              style="height: 8px !important;min-height: 8px !important;"></span>&nbsp;<%- movie.quality %>
                                                     </div>
                                                 <% } %>
                                             </div>
