--- a/views/includes/left.ejs
+++ b/views/includes/left.ejs
@@ -21,7 +21,7 @@
             <div class="miniblock">
                 <div class="mini" style="border-top:0px; padding-top:0px;">
                     <i style="font-size:14px;"><%- page.l.years %></i><br><br>
-                    <% page.urls.years.slice(0,10).forEach(function(year) { %>
+                    <% page.urls.years.slice(0, 10).forEach(function(year) { %>
                         <a href="<%- year.url %>">
                             <%- year.title %>
                         </a><br>
@@ -30,12 +30,13 @@
                 </div>
                 <div class="mini">
                     <i style="font-size:14px;"><%- page.l.countries %></i><br><br>
-                    <% page.urls.countries.slice(0,9).forEach(function(country) { %>
+                    <% page.urls.countries.slice(0, 9).forEach(function(country) { %>
                         <a href="<%- country.url %>">
                             <%- country.title %>
                         </a><br>
                     <% }); %>
-                    <div class="poloska"></div></div>
+                    <div class="poloska"></div>
+                </div>
                 <div class="mini">
                     <a href="/<%- page.urls.year %>"><%- page.l.allYears %></a><br>
                     <a href="/<%- page.urls.genre %>"><%- page.l.allGenres %></a><br>
@@ -61,11 +62,18 @@ border-bottom: 1px solid #3f413f;"><i style="font-size:15px;"><%- category.name 
                 <% var moreEpisodes = false; %>
                 <% if (category.movies.length) {
                 category.movies.forEach(function (movie) { %>
-                    <li class="li_serial" <% if (movie.hide) { moreEpisodes = true; %>style="display:none" data-more-episodes="hide"<% } %>>
+                    <li class="li_serial" <% if (movie.hide) { moreEpisodes = true; %>style="display:none"
+                        data-more-episodes="hide"
+                            <% } %>
+                    >
                         <a href="<%- movie.url %>" rel="nofollow">
                             <img src="<%- movie.poster %>" alt="<%= movie.title %>">
                             <br><%= movie.title %><br>
-                            <small><% if (movie.season && movie.episode) { %><%- movie.season %> <%- page.l.season %> <%- movie.episode %> <%- page.l.episode %><% if (movie.translate) { %><br><%- movie.translate %><% } %><% } %></small>
+                            <small>
+                                <% if (movie.season && movie.episode) { %><%- movie.season %> <%- page.l.season %> <%- movie.episode %> <%- page.l.episode %><% if (movie.translate) { %>
+                                    <br><%- movie.translate %><% } %>
+                                <% } %>
+                            </small>
                         </a>
                     </li>
                 <% }); } %>
@@ -74,7 +82,8 @@ border-bottom: 1px solid #3f413f;"><i style="font-size:15px;"><%- category.name 
 
         <% if (moreEpisodes) { %>
             <div style="clear:both"></div>
-            <div class="moreEpisodes" onclick="var dme = document.querySelectorAll('[data-more-episodes]'); dme && dme.forEach(function(e) {e.style.display='block'});this.style.display='none'"><%- page.l.moreEpisodes %></div>
+            <div class="moreEpisodes"
+                 onclick="var dme = document.querySelectorAll('[data-more-episodes]'); dme && dme.forEach(function(e) {e.style.display='block'});this.style.display='none'"><%- page.l.moreEpisodes %></div>
         <% } %>
 
     <% }); } } } %>
@@ -102,7 +111,8 @@ border-bottom: 1px solid #3f413f;"><i style="font-size:15px;"><%- page.l.soon %>
     <% if (typeof news === 'object' && news.length) { %>
         <% news.forEach(function (content) { %>
             <div style="margin: 10px;">
-                <a href="<%- content.url %>" class="cinemapress-news" style="background-image:url('<%- content.image %>');">
+                <a href="<%- content.url %>" class="cinemapress-news"
+                   style="background-image:url('<%- content.image %>');">
                     <div class="cinemapress-news-title">
                         <%= content.title %>
                     </div>
@@ -132,11 +142,14 @@ border-bottom: 1px solid #3f413f;"><i style="font-size:15px;"><%- page.l.soon %>
                             <div class="cinemapress-comment-user" data-comment-id="<%- comment.id %>">
                                 <div class="cinemapress-comment-user-name">
                                     <%- comment.user %>
-                                </div><div class="cinemapress-comment-user-said">
+                                </div>
+                                <div class="cinemapress-comment-user-said">
                                     <%- page.l.said %>
-                                </div><div class="cinemapress-comment-user-date">
+                                </div>
+                                <div class="cinemapress-comment-user-date">
                                     <%- comment.date %>
-                                </div><div class="cinemapress-comment-user-link">
+                                </div>
+                                <div class="cinemapress-comment-user-link">
                                     <a href="<%- comment.url %>#c<%- comment.id %>" title="<%= comment.title %>">#</a>
                                 </div>
                             </div>
