--- a/views/picture.ejs
+++ b/views/picture.ejs
@@ -1,5 +1,6 @@
 <!doctype html>
-<html lang="<%- page.language %>" prefix="og: http://ogp.me/ns# video: http://ogp.me/ns/video# ya: http://webmaster.yandex.ru/vocabularies/">
+<html lang="<%- page.language %>"
+      prefix="og: http://ogp.me/ns# video: http://ogp.me/ns/video# ya: http://webmaster.yandex.ru/vocabularies/">
 <head>
 
     <%- include('includes/head.ejs'); -%>
@@ -55,7 +56,9 @@
                                 <% if (movie.poster) { %>
                                     <a href="<%- movie.url %>" style="float: left">
                                         <div class="cinemapress-poster">
-                                            <img src="<%- movie.poster %>" style="width: 200px; height: 300px;" alt="<%= page.title %>" title="<%= page.title %>" data-cinemapress-poster="<%- movie.poster %>">
+                                            <img src="<%- movie.poster %>" style="width: 200px; height: 300px;"
+                                                 alt="<%= page.title %>" title="<%= page.title %>"
+                                                 data-cinemapress-poster="<%- movie.poster %>">
                                             <% if (movie.quality) { %>
                                                 <div class="cinemapress-quality">
                                                     <span class="cinemapress-svg-quality"></span>
@@ -78,10 +81,12 @@
                                 <% } %>
                                 <br>
                                 <% if (movie.kp_rating) { %>
-                                    <strong><%- page.l.kp %>:</strong> <%- movie.kp_rating / 10 %> (<%- movie.kp_vote %> <%- page.l.votes %>)<br>
+                                    <strong><%- page.l.kp %>:</strong> <%- movie.kp_rating / 10 %>
+                                    (<%- movie.kp_vote %> <%- page.l.votes %>)<br>
                                 <% } %>
                                 <% if (movie.imdb_rating) { %>
-                                    <strong><%- page.l.imdb %>:</strong> <%- movie.imdb_rating / 10 %> (<%- movie.imdb_vote %> <%- page.l.votes %>)<br>
+                                    <strong><%- page.l.imdb %>:</strong> <%- movie.imdb_rating / 10 %>
+                                    (<%- movie.imdb_vote %> <%- page.l.votes %>)<br>
                                 <% } %>
                                 <br>
                                 <% if (movie.year_url) { %>
@@ -170,7 +175,8 @@
                     <% contents.forEach(function (content) { %>
                         <div style="float: left; width: 50%;">
                             <div style="margin: 0; padding: 10px">
-                                <a href="<%- content.url %>" class="cinemapress-news" style="background-image:url('<%- content.image %>');">
+                                <a href="<%- content.url %>" class="cinemapress-news"
+                                   style="background-image:url('<%- content.image %>');">
                                     <div class="cinemapress-news-title">
                                         <%= content.title %>
                                     </div>
@@ -189,7 +195,7 @@
                         <i><span class="selection_index"></span><%- category.name %></i>
                         <div class="randomMovieRelated">
                             <div class="cinemapress-random-related"
-                                 onclick="window.location.href='<%- (category.url && category.url.indexOf('?')+1 ? category.url + '&random=' : category.url + '?random=') %><%- Math.random() %>'"
+                                 onclick="window.location.href='<%- (category.url && category.url.indexOf('?') + 1 ? category.url + '&random=' : category.url + '?random=') %><%- Math.random() %>'"
                                  title="<%= page.l.random %>">
                                 <img src="/themes/<%- page.theme %>/public/images/dice.svg" alt="<%= page.l.random %>">
                             </div>
@@ -202,7 +208,8 @@
                             category.movies.forEach(function (movie) { %>
                                 <li>
                                     <a href="<%- movie.url %>" title="<%= movie.title %> (<%- movie.year %>)">
-                                        <img src="<%- movie.poster %>" style="height:165px; width:110px" alt="<%= movie.title %>">
+                                        <img src="<%- movie.poster %>" style="height:165px; width:110px"
+                                             alt="<%= movie.title %>">
                                         <%= movie.title %> (<%- movie.year %>)
                                     </a>
                                 </li>
@@ -235,23 +242,34 @@
                                 <div class="cinemapress-comment-form">
                                     <% if (comments.config.bb_codes) { %>
                                         <div class="cinemapress-comment-form-bb">
-                                            <span class="cinemapress-comment-bg cinemapress-comment-form-bb-b" data-bb-code="b"><%- page.l.bold.toLowerCase() %></span>
-                                            <span class="cinemapress-comment-bg cinemapress-comment-form-bb-i" data-bb-code="i"><%- page.l.italic.toLowerCase() %></span>
-                                            <span class="cinemapress-comment-bg cinemapress-comment-form-bb-spoiler" data-bb-code="spoiler">👻 <%- page.l.spoiler.toLowerCase() %></span>
-                                            <span class="cinemapress-comment-bg cinemapress-comment-form-bb-search" data-bb-code="search">🔍 <%- page.l.search.toLowerCase() %></span>
-                                            <input class="cinemapress-comment-bg cinemapress-comment-form-anonymous" name="comment_anonymous" type="text" placeholder="<%- page.l.username %>">
+                                            <span class="cinemapress-comment-bg cinemapress-comment-form-bb-b"
+                                                  data-bb-code="b"><%- page.l.bold.toLowerCase() %></span>
+                                            <span class="cinemapress-comment-bg cinemapress-comment-form-bb-i"
+                                                  data-bb-code="i"><%- page.l.italic.toLowerCase() %></span>
+                                            <span class="cinemapress-comment-bg cinemapress-comment-form-bb-spoiler"
+                                                  data-bb-code="spoiler">👻 <%- page.l.spoiler.toLowerCase() %></span>
+                                            <span class="cinemapress-comment-bg cinemapress-comment-form-bb-search"
+                                                  data-bb-code="search">🔍 <%- page.l.search.toLowerCase() %></span>
+                                            <input class="cinemapress-comment-bg cinemapress-comment-form-anonymous"
+                                                   name="comment_anonymous" type="text"
+                                                   placeholder="<%- page.l.username %>">
                                         </div>
                                     <% } %>
                                     <div>
                                         <div class="cinemapress-comment-textarea-div">
-                                            <textarea name="comment_text" class="cinemapress-comment-bg cinemapress-comment-textarea" placeholder="<%- page.l.comment %>" autocomplete="off" autocapitalize="off" spellcheck="false"></textarea>
+                                            <textarea name="comment_text"
+                                                      class="cinemapress-comment-bg cinemapress-comment-textarea"
+                                                      placeholder="<%- page.l.comment %>" autocomplete="off"
+                                                      autocapitalize="off" spellcheck="false"></textarea>
                                             <div class="cinemapress-comment-form-bg"></div>
-                                            <div class="cinemapress-comment-button-bg hover-off" data-comment-type="submit">
+                                            <div class="cinemapress-comment-button-bg hover-off"
+                                                 data-comment-type="submit">
                                                 <span class="cinemapress-comment-button-text"></span>
                                             </div>
                                         </div>
                                         <% if (comments.config.question) { %>
-                                            <div class="cinemapress-comment-bg cinemapress-comment-question" style="display: none">
+                                            <div class="cinemapress-comment-bg cinemapress-comment-question"
+                                                 style="display: none">
                                                 <div class="cinemapress-comment-question-text"><%- comments.config.question %></div>
                                                 <div class="cinemapress-comment-question-answer">
                                                     <% if (comments.config.question_yes) { %>
@@ -262,23 +280,32 @@
                                                     <% } %>
                                                 </div>
                                                 <% if (comments.config.question_yes) { %>
-                                                    <div class="cinemapress-comment-question-text-yes" style="display: none">
+                                                    <div class="cinemapress-comment-question-text-yes"
+                                                         style="display: none">
                                                         <%- comments.config.question_yes %>
                                                     </div>
                                                 <% } %>
                                                 <% if (comments.config.question_not) { %>
-                                                    <div class="cinemapress-comment-question-text-not" style="display: none">
+                                                    <div class="cinemapress-comment-question-text-not"
+                                                         style="display: none">
                                                         <%- comments.config.question_not %>
                                                     </div>
                                                 <% } %>
                                                 <div class="cinemapress-comment-question-bg"></div>
                                                 <% if (comments.config.question_poster) { %>
-                                                    <div class="cinemapress-comment-question-bg-poster" style="background-image:url('<%- comments.config.question_poster %>')"></div>
+                                                    <div class="cinemapress-comment-question-bg-poster"
+                                                         style="background-image:url('<%- comments.config.question_poster %>')"></div>
                                                 <% } %>
                                             </div>
                                         <% } %>
                                     </div>
-                                    <div style="font-size:8px;text-align:right;opacity:.2">This site is protected by reCAPTCHA and the Google <a href="https://policies.google.com/privacy" style="font-size:8px" target="_blank">Privacy Policy</a> and <a href="https://policies.google.com/terms" style="font-size:8px" target="_blank">Terms of Service</a> apply.</div>
+                                    <div style="font-size:8px;text-align:right;opacity:.2">This site is protected by
+                                        reCAPTCHA and the Google <a href="https://policies.google.com/privacy"
+                                                                    style="font-size:8px" target="_blank">Privacy
+                                            Policy</a> and <a href="https://policies.google.com/terms"
+                                                              style="font-size:8px" target="_blank">Terms of Service</a>
+                                        apply.
+                                    </div>
                                 </div>
                                 <%- comments.indexer ? comments.indexer : '' %>
                                 <% if (comments.list && comments.list.length) { %>
@@ -305,26 +332,38 @@
                                                 <% } %>
                                                 <div class="cinemapress-comment-head-meta">
                                                     <div class="cinemapress-comment-head-meta-vote">
-                                                        <span class="cinemapress-comment-like" data-comment-type="like" data-comment-id="<%- comment.id %>" title="<%= page.l.like %>">
+                                                        <span class="cinemapress-comment-like" data-comment-type="like"
+                                                              data-comment-id="<%- comment.id %>"
+                                                              title="<%= page.l.like %>">
                                                             <span class="cinemapress-comment-like-icon"></span>
                                                             <span class="cinemapress-comment-like-number"><%- comment.like %></span>
                                                         </span>
-                                                        <span class="cinemapress-comment-dislike" data-comment-type="dislike" data-comment-id="<%- comment.id %>" title="<%= page.l.dislike %>">
+                                                        <span class="cinemapress-comment-dislike"
+                                                              data-comment-type="dislike"
+                                                              data-comment-id="<%- comment.id %>"
+                                                              title="<%= page.l.dislike %>">
                                                             <span class="cinemapress-comment-dislike-number"><%- comment.dislike %></span>
                                                             <span class="cinemapress-comment-dislike-icon"></span>
                                                         </span>
-                                                        <span class="cinemapress-comment-reply" data-reply-id="<%- comment.id %>" data-bb-code="b" data-bb-value="<%- comment.user %>" title="<%= page.l.reply %>">
+                                                        <span class="cinemapress-comment-reply"
+                                                              data-reply-id="<%- comment.id %>" data-bb-code="b"
+                                                              data-bb-value="<%- comment.user %>"
+                                                              title="<%= page.l.reply %>">
                                                             <span class="cinemapress-comment-reply-icon"></span>
                                                         </span>
                                                     </div>
-                                                    <div class="cinemapress-comment-user" data-comment-id="<%- comment.id %>">
+                                                    <div class="cinemapress-comment-user"
+                                                         data-comment-id="<%- comment.id %>">
                                                         <div class="cinemapress-comment-user-name">
                                                             <%- comment.user %>
-                                                        </div><div class="cinemapress-comment-user-said">
+                                                        </div>
+                                                        <div class="cinemapress-comment-user-said">
                                                             <%- page.l.said %>
-                                                        </div><div class="cinemapress-comment-user-date">
+                                                        </div>
+                                                        <div class="cinemapress-comment-user-date">
                                                             <%- comment.date %>
-                                                        </div><div class="cinemapress-comment-user-link">
+                                                        </div>
+                                                        <div class="cinemapress-comment-user-link">
                                                             <a href="<%- comment.url %>#c<%- comment.id %>">#</a>
                                                         </div>
                                                     </div>
@@ -347,10 +386,12 @@
                             <% } %>
                             <div class="cinemapress-comment-arrow">
                                 <% if (comments && comments.prev) { %>
-                                    <div class="cinemapress-prev-comments" onclick="window.location.href='?page=<%- comments.prev %>#cinemapress-comments'"></div>
+                                    <div class="cinemapress-prev-comments"
+                                         onclick="window.location.href='?page=<%- comments.prev %>#cinemapress-comments'"></div>
                                 <% } %>
                                 <% if (comments && comments.next) { %>
-                                    <div class="cinemapress-next-comments" onclick="window.location.href='?page=<%- comments.next %>#cinemapress-comments'"></div>
+                                    <div class="cinemapress-next-comments"
+                                         onclick="window.location.href='?page=<%- comments.next %>#cinemapress-comments'"></div>
                                 <% } %>
                             </div>
                         </div>
