Changed check category

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -47,7 +47,7 @@
                             </div>
                         </h2>
 
-                        <% if (category.movies.length) {
+                        <% if (typeof category === 'object' && category.movies && category.movies.length) {
                         category.movies.forEach(function (movie) { %>
                             <div class="shortstory">
                                 <div class="shortstorytitle">
