--- a/views/includes/left.ejs
+++ b/views/includes/left.ejs
@@ -60,7 +60,7 @@ border-bottom: 1px solid #3f413f;"><i style="font-size:15px;"><%- category.name 
         <div class="mimiserblock">
             <ul>
                 <% var moreEpisodes = false; %>
-                <% if (category.movies.length) {
+                <% if (typeof category === 'object' && category.movies && category.movies.length) {
                 category.movies.forEach(function (movie) { %>
                     <li class="li_serial" <% if (movie.hide) { moreEpisodes = true; %>style="display:none"
                         data-more-episodes="hide"
