--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,6 +7,10 @@
 </head>
 <body>
 
+<% if (typeof page.adv === 'object' && page.adv.brand) { %>
+    <%- page.adv.brand %>
+<% } %>
+
 <div class="header_black"></div>
 
 <div class="wrapper">
