--- a/views/picture.ejs
+++ b/views/picture.ejs
@@ -8,6 +8,10 @@
 </head>
 <body>
 
+<% if (typeof page.adv === 'object' && page.adv.brand) { %>
+    <%- page.adv.brand %>
+<% } %>
+
 <div class="header_black"></div>
 
 <div class="wrapper">
