--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -35,7 +35,7 @@
     </span>
 
     <div style="float:right;  text-align: right; width:300px; padding-top: 12px; padding-bottom: 12px;">
-        &copy;&nbsp;<%- new Date().getFullYear() %>&nbsp;<a href="https://cinemapress.io"
+        &copy;&nbsp;<%- new Date().getFullYear() %>&nbsp;<a href="https://github.com/CinemaPress/CinemaPress"
                                                             target="_blank">CinemaPress</a>
     </div>
 
